cambio de fondo del index

--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 /* estilos generales */
 
 body{
-    background-color: #eceef3;
+    background-color: tomato;
     font-family: 'Roboto', sans-serif;
 }
 
